# sophistication

./: 1.txt  CMakeLists.txt  README.md
cmake/: install.cmake
include/: bit_op.h  cufft_api_test.h  element_op.h  register_app.h  test_register_function.h
register_app/cpp/: bit_op.cpp  test_register_function.cpp
register_app/cuda/cufft_api/: cufft_api_1d_C2C.cpp  cufft_api_1d_R2C.cpp  cufft_api_1d_mgpu_C2C.cpp  cufft_api_2d_C2R.cpp  cufft_api_3d_C2C.cpp  cufft_api_3d_mgpu_C2C.cpp  cufft_api_3d_mgpu_R2C_C2R.cpp
register_app/cuda/matmul_op/: matmul.cpp  matmul.cuh
register_app/cuda/vectoradd_op/: vectoradd.cpp  vectoradd.cu  vectoradd.cuh
register_app/cufft_api_test/: cufft_api_1d_C2C.cpp  cufft_api_1d_R2C.cpp  cufft_api_1d_mgpu_C2C.cpp  cufft_api_2d_C2R.cpp  cufft_api_3d_C2C.cpp  cufft_api_3d_mgpu_C2C.cpp  cufft_api_3d_mgpu_R2C_C2R.cpp
register_app/internal_include/: element_op.h  test_register_function.h
register_app/sophistication/: bit_op.cpp  test_register_function.cpp
register_app/sophistication/cuda_learning/: matmul.cpp  matmul.cu  matmul.cuh  vector_add.cu  vectoradd.cpp  vectoradd.cu  vectoradd.cuh
src/: factory.cpp  register.cpp
src/include/: common.h  factory.h  register.h  static.h  utils.h
test/: CMakeLists.txt  main.cpp
test/src/: bit_op.cpp  cuda_api_matmul.cpp  cuda_api_vector.cpp  cufft_api_test.cpp  test.h
